--- a/packages/user-api/route/BUILD.bazel
+++ b/packages/user-api/route/BUILD.bazel
@@ -9,9 +9,12 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/user-api/route",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/auth",
+        "//packages/auth/filter",
         "//packages/common/helper/fx",
+        "//packages/common/otel",
+        "//packages/common/service",
         "//packages/user-api/controller",
-        "//packages/user-api/middleware",
         "@com_github_gin_gonic_gin//:gin",
         "@org_uber_go_fx//:fx",
         "@org_uber_go_zap//:zap",
