--- a/packages/sdk/service/user/BUILD.bazel
+++ b/packages/sdk/service/user/BUILD.bazel
@@ -8,8 +8,8 @@ go_library(
     deps = [
         "//packages/domain/dto",
         "//packages/sdk/dupman/session",
+        "//packages/sdk/errors",
         "//packages/sdk/internal/client",
-        "//packages/sdk/internal/errors",
         "@com_github_go_resty_resty_v2//:resty",
         "@com_github_google_uuid//:uuid",
     ],
