--- a/packages/sdk/service/website/BUILD.bazel
+++ b/packages/sdk/service/website/BUILD.bazel
@@ -9,8 +9,8 @@ go_library(
         "//packages/common/pagination",
         "//packages/domain/dto",
         "//packages/sdk/dupman/session",
+        "//packages/sdk/errors",
         "//packages/sdk/internal/client",
-        "//packages/sdk/internal/errors",
         "@com_github_go_resty_resty_v2//:resty",
         "@com_github_google_uuid//:uuid",
     ],
