--- a/packages/kc-themes/src/main/resources/theme/dupman/login/theme.properties
+++ b/packages/kc-themes/src/main/resources/theme/dupman/login/theme.properties
@@ -1,5 +1,6 @@
 parent=base
 import=common/dupman
+common=common/dupman
 
 styles=css/login.css
 stylesCommon=lib/bootstrap/bootstrap.min.css lib/bootstrap/helper.css lib/font-awesome/all.min.css
