--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -19,6 +19,13 @@
     "@mui/lab": "^5.0.0-alpha.139",
     "@mui/material": "^5.14.3",
     "@mui/x-data-grid": "^6.11.0",
+    "@opentelemetry/exporter-metrics-otlp-grpc": "^0.45.1",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.45.1",
+    "@opentelemetry/resources": "^1.18.1",
+    "@opentelemetry/sdk-node": "^0.45.1",
+    "@opentelemetry/sdk-trace-node": "^1.18.1",
+    "@opentelemetry/semantic-conventions": "^1.18.1",
+    "axios": "^1.6.3",
     "date-fns": "^2.30.0",
     "eslint": "^8.46.0",
     "eslint-config-next": "^13.4.13",
