--- a/packages/sdk/service/notify/BUILD.bazel
+++ b/packages/sdk/service/notify/BUILD.bazel
@@ -7,9 +7,9 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//packages/domain/dto",
-        "//packages/sdk/dupman/session",
+        "//packages/sdk/dupman",
         "//packages/sdk/errors",
         "//packages/sdk/internal/client",
-        "@com_github_go_resty_resty_v2//:resty",
+        "//packages/sdk/service",
     ],
 )
