--- a/packages/sdk/service/website/BUILD.bazel
+++ b/packages/sdk/service/website/BUILD.bazel
@@ -8,10 +8,10 @@ go_library(
     deps = [
         "//packages/common/pagination",
         "//packages/domain/dto",
-        "//packages/sdk/dupman/session",
+        "//packages/sdk/dupman",
         "//packages/sdk/errors",
         "//packages/sdk/internal/client",
-        "@com_github_go_resty_resty_v2//:resty",
+        "//packages/sdk/service",
         "@com_github_google_uuid//:uuid",
     ],
 )
