--- a/packages/notifier/processor/BUILD.bazel
+++ b/packages/notifier/processor/BUILD.bazel
@@ -6,12 +6,13 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/notifier/processor",
     visibility = ["//visibility:public"],
     deps = [
-        "//packages/common/service",
         "//packages/domain/dto",
         "//packages/notifier/config",
         "//packages/notifier/deliverer",
         "//packages/notifier/service",
+        "//packages/sdk/dupman",
         "//packages/sdk/dupman/credentials",
+        "//packages/sdk/service/user",
         "@com_github_google_uuid//:uuid",
         "@com_github_rabbitmq_amqp091_go//:amqp091-go",
         "@org_uber_go_zap//:zap",
