--- a/packages/preview-api/controller/BUILD.bazel
+++ b/packages/preview-api/controller/BUILD.bazel
@@ -13,7 +13,9 @@ go_library(
         "//packages/common/service",
         "//packages/domain/dto",
         "//packages/preview-api/service",
+        "//packages/sdk/dupman",
         "//packages/sdk/dupman/credentials",
+        "//packages/sdk/service/website",
         "@com_github_gin_gonic_gin//:gin",
         "@com_github_google_uuid//:uuid",
         "@org_uber_go_fx//:fx",
