--- a/packages/scanner/processor/BUILD.bazel
+++ b/packages/scanner/processor/BUILD.bazel
@@ -7,14 +7,15 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//packages/common/otel",
-        "//packages/common/service",
         "//packages/common/vault",
         "//packages/domain/dto",
         "//packages/scanner/config",
         "//packages/scanner/fetcher",
         "//packages/scanner/model",
         "//packages/scanner/service",
+        "//packages/sdk/dupman",
         "//packages/sdk/dupman/credentials",
+        "//packages/sdk/service/system",
         "@com_github_google_uuid//:uuid",
         "@com_github_jinzhu_copier//:copier",
         "@com_github_rabbitmq_amqp091_go//:amqp091-go",
