--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -36,6 +36,7 @@ use_repo(
     "io_gorm_gorm",
     "io_gorm_plugin_opentelemetry",
     "io_opentelemetry_go_contrib_instrumentation_github_com_gin_gonic_gin_otelgin",
+    "io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp",
     "io_opentelemetry_go_otel",
     "io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetricgrpc",
     "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc",
