--- a/packages/sdk/internal/client/BUILD.bazel
+++ b/packages/sdk/internal/client/BUILD.bazel
@@ -14,5 +14,6 @@ go_library(
         "//packages/sdk/dupman",
         "//packages/sdk/errors",
         "@com_github_go_resty_resty_v2//:resty",
+        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:otelhttp",
     ],
 )
