--- a/packages/scanner/processor/BUILD.bazel
+++ b/packages/scanner/processor/BUILD.bazel
@@ -15,6 +15,7 @@ go_library(
         "//packages/scanner/service",
         "//packages/sdk/dupman",
         "//packages/sdk/dupman/credentials",
+        "//packages/sdk/service",
         "//packages/sdk/service/system",
         "@com_github_google_uuid//:uuid",
         "@com_github_jinzhu_copier//:copier",
