feat: integrate with Ory stack

--- a/packages/api/service/BUILD.bazel
+++ b/packages/api/service/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "//packages/api/model",
         "//packages/api/repository",
         "//packages/common/broker",
+        "//packages/common/ory/keto",
         "//packages/common/otel",
         "//packages/common/pagination",
         "//packages/common/service",
