--- a/packages/auth/BUILD.bazel
+++ b/packages/auth/BUILD.bazel
@@ -2,23 +2,11 @@ load("@rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "auth",
-    srcs = [
-        "auth.go",
-        "middleware.go",
-        "middleware_options.go",
-    ],
+    srcs = ["middleware.go"],
     importpath = "github.com/dupmanio/dupman/packages/auth",
     visibility = ["//visibility:public"],
     deps = [
         "//packages/auth/constant",
-        "//packages/domain/dto",
-        "//packages/domain/errors",
-        "//packages/sdk/dupman",
-        "//packages/sdk/dupman/credentials",
-        "//packages/sdk/errors",
-        "//packages/sdk/service",
-        "//packages/sdk/service/user",
         "@com_github_gin_gonic_gin//:gin",
-        "@com_github_golang_jwt_jwt_v5//:jwt",
     ],
 )
