--- a/packages/api/app/BUILD.bazel
+++ b/packages/api/app/BUILD.bazel
@@ -19,6 +19,7 @@ go_library(
         "//packages/common/database",
         "//packages/common/helper/fx",
         "//packages/common/logger",
+        "//packages/common/ory/keto",
         "//packages/common/otel",
         "//packages/common/server",
         "//packages/common/vault",
